--- a/scss/style.scss
+++ b/scss/style.scss
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    overflow-x: hidden
+
 }
 
 @import"../assets/color";
@@ -15,6 +15,7 @@ body{
     font-family: "Poppins", sans-serif;
     font-style: normal;
     box-sizing: border-box;
+    overflow-x: hidden;
 }
 
 .container{
