--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,7 +9,9 @@
 @import"../assets/heade";
 @import"../assets/main";
 
-
+html{
+    // scroll-behavior: smooth ;
+}
 
 body{
     font-family: "Poppins", sans-serif;
