--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,7 +25,7 @@ body{
     position: relative;
     left: 50%;
     transform: translateX(-50%);
-    padding: 0 10px;
+    margin: 0 10px;
 }
 
 a{
