--- a/scss/style.css
+++ b/scss/style.css
@@ -209,7 +209,10 @@ body {
 
 .container {
   max-width: 1200px;
-  margin: 0 auto;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 0 5px;
 }
 
 a {
