--- a/assets/_heade.scss
+++ b/assets/_heade.scss
@@ -88,7 +88,6 @@ header {
             font-size: 2.2rem;
             font-weight: bold;
             text-transform: uppercase;
-            text-align: center;
             }
           }
           .subtitleHeader {
@@ -285,14 +284,17 @@ header {
         .header {
           padding-top: 50px;
           flex-direction: column-reverse;
-
+          height: 100vh;
+          
           .col1 {
             gap: 10px;
 
             .titleHeader {
+              h1{
               color: $white;
-              font-size: 1.5rem;
+              font-size: 1.6rem;
               margin-top: 40px;
+              }
             }
             .subtitleHeader {
               font-size: 1rem;
@@ -307,7 +309,7 @@ header {
               display: flex;
               justify-content: center;
               img {
-                width: 100%;
+                width: 60%;
               }
             }
           }
@@ -324,6 +326,10 @@ header {
           .card-item {
             padding: 35px 5px;
             div {
+              height: 50px;
+              img{
+                width: 80px;
+              }
               h3 {
                 font-size: 1rem;
               }
@@ -340,7 +346,7 @@ header {
     .headerInfo {
       .overflow {
         .header {
-          height: 258vh;
+          height: 223vh;
           flex-direction: column-reverse;
           .col1 {
             gap: 20px;
