--- a/assets/_heade.scss
+++ b/assets/_heade.scss
@@ -134,6 +134,7 @@ header {
         justify-content: space-between;
         flex-wrap: wrap;
         gap: 17px;
+        padding-right: 10px;
 
         .card-item {
           flex: 1;
