--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -285,6 +285,9 @@ main {
               }
             }
           }
+          .history{
+            margin-right: 10px;
+          }
           .btnHistory {
             color: red;
             width: 250px;
