--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -198,17 +198,28 @@ main {
     padding: 100px 0 40px 0;
 
     .titleSection{
-      padding-bottom: 120px;
+      padding-bottom: 80px;
+    }
+
+    .subtitle--service{
+      padding: 0 0 120px 0;
+      text-align: center;
+      h2{
+        background-color: #fff;
+        font-size: 1.4rem;
+        text-transform: uppercase;
+        color: $primary-color;
+      }
     }
 
     .service--cards {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      justify-content: flex-start;
+      justify-content: center;
       align-items: center;  
       width: 100%;
-      gap: 65px;
+      gap: 19px;
       .card--item {
         // flex: 1;
         width: 300px;
@@ -219,14 +230,19 @@ main {
         flex-direction: column;
         gap: 15px;
         .card--img {
-          height: 130px;
+          height: 180px;
           display: flex;
-
+          justify-content: center;
           img {
             border-radius: 15px;
+            width: 100%;
+            display: block;
           }
         }
         .card--title {
+          display: flex;
+          align-items: center;
+          height: 40px;
           h4 {
             color: $primary-color;
             text-transform: uppercase;
@@ -235,6 +251,8 @@ main {
           }
         }
         .card--text {
+          height: 60px;
+
           p {
             font-size: 0.8rem;
             font-weight: normal;
