--- a/scss/style.css
+++ b/scss/style.css
@@ -509,16 +509,26 @@ main .services {
   padding: 100px 0 40px 0;
 }
 main .services .titleSection {
-  padding-bottom: 120px;
+  padding-bottom: 80px;
+}
+main .services .subtitle--service {
+  padding: 0 0 120px 0;
+  text-align: center;
+}
+main .services .subtitle--service h2 {
+  background-color: #fff;
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  color: #008374;
 }
 main .services .service--cards {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
   width: 100%;
-  gap: 65px;
+  gap: 19px;
 }
 main .services .service--cards .card--item {
   width: 300px;
@@ -530,17 +540,28 @@ main .services .service--cards .card--item {
   gap: 15px;
 }
 main .services .service--cards .card--item .card--img {
-  height: 130px;
+  height: 180px;
   display: flex;
+  justify-content: center;
 }
 main .services .service--cards .card--item .card--img img {
   border-radius: 15px;
+  width: 100%;
+  display: block;
+}
+main .services .service--cards .card--item .card--title {
+  display: flex;
+  align-items: center;
+  height: 40px;
 }
 main .services .service--cards .card--item .card--title h4 {
   color: #008374;
   text-transform: uppercase;
   font-size: 1rem;
   text-align: start;
+}
+main .services .service--cards .card--item .card--text {
+  height: 60px;
 }
 main .services .service--cards .card--item .card--text p {
   font-size: 0.8rem;
