--- a/scss/style.css
+++ b/scss/style.css
@@ -338,6 +338,7 @@ header .close {
 }
 main {
   padding-top: 200px;
+  padding-right: 10px;
   overflow-x: hidden;
 }
 main .titleSection {
@@ -655,6 +656,9 @@ main .services .service--cards .card--item .card--button span i {
   main .about .colsConatinerSectionOn .colSection-two .btnHistory {
     margin-left: 50%;
     transform: translateX(-50%);
+  }
+  main .services .service--cards .card--item {
+    width: 100%;
   }
   main .services .subtitle--service {
     padding: 0 0 80px 0;
