--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -7,7 +7,7 @@ main {
     text-align: start;
     padding-bottom: 50px;
     h3 {
-      font-size: 1.6rem;
+      font-size: 1.4rem;
       text-transform: uppercase;
       font-weight: 600;
       position: relative;
@@ -63,7 +63,6 @@ main {
 
         .slider {
           max-width: 600px;
-          // height: 400px;
           overflow: hidden;
           border-radius: 15px;
           box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
@@ -194,8 +193,12 @@ main {
       }
     }
   }
+
+  // Serviço -------------------------------
+
+
   .services {
-    padding: 100px 0 40px 0;
+    padding: 100px 0 150px 0;
 
     .titleSection{
       padding-bottom: 80px;
@@ -289,6 +292,115 @@ main {
           }
         }
       }
+    }
+  }
+
+
+  // Testemunhas --------------------------
+
+
+  .testemunhas{
+    overflow: hidden;
+    padding-bottom: 200px;
+    .titleSection{
+      padding: 60px 0;
+    }
+
+    .testemunhas--subtitle{
+      padding: 0 0 120px 0;
+      text-align: center;
+      h2{
+        background-color: #fff;
+        font-size: 1.4rem;
+        text-transform: uppercase;
+        color: $primary-color;
+      }
+    }
+    .slider--container{
+        width: 100%;
+        margin: 0 auto;
+        height: 500px;
+        overflow: hidden;
+
+      .slides--cards{
+        display: flex;
+        flex-direction: row;
+        gap: 40px;
+        width: 400%;
+        height: 400px;
+        margin: 10px;
+
+      
+
+        input{
+          display: none;
+        }
+
+        .slide--card-item{
+          background-color: $white ;
+          box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+          padding: 40px;
+          display: flex;
+          flex-direction: column;
+          gap: 10px;
+          width: 7.7%;
+          position: relative;
+          .slide-card-img{
+            display: flex;
+            img{
+              width: 80px;
+              border-radius: 50%;
+            }
+          }
+
+          .slide-card-tite{
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+            h3{
+              font-size: 16px;
+            }
+            p{
+              font-size: 12px;
+              color: $gray-dark;
+            }
+
+            .card-star{
+              display: flex;
+              flex-direction: row;
+              i{
+                color: #FFC107;
+              }
+            }
+          }
+
+          .slide-card-text{
+            font-style: italic;
+            font-weight: 400;
+            text-indent: 30px;
+            margin-top: 15px;
+          }
+        }
+      }
+      .manual-navigaton{
+        position: absolute;
+        width: 100%;
+        margin-top: 30px;
+        display: flex;
+        justify-content: center;
+
+        .manual-btn{
+          border: 2px solid red;
+          padding: 5px;
+          border-radius: 10px;
+          cursor: pointer;
+
+        }
+      }
+      .manual-navigaton .manual-btn:not(:last-child){
+        margin-right: 40px;
+      }
+
     }
   }
 }
