--- a/assets/_main.scss
+++ b/assets/_main.scss
@@ -381,6 +381,7 @@ main {
             margin-top: 15px;
           }
         }
+
       }
       .manual-navigaton{
         position: absolute;
@@ -388,12 +389,12 @@ main {
         margin-top: 30px;
         display: flex;
         justify-content: center;
-
         .manual-btn{
-          border: 2px solid red;
+          border: 2px solid $primary-color;
           padding: 5px;
           border-radius: 10px;
           cursor: pointer;
+          transition: 1s;
 
         }
       }
@@ -401,6 +402,18 @@ main {
         margin-right: 40px;
       }
 
+      .manual-navigaton .manual-btn:hover{
+        background-color: $primary-color;
+      }
+      
+      #radio1:checked ~ .first{
+        margin-left: 0;
+      }
+      #radio2:checked ~ .first{
+        margin-left: -25%;
+      }
+
+      
     }
   }
 }
